syntax = "proto3";

package Proto.Command.Note;

import "google/protobuf/timestamp.proto";

service NoteCommandService {
  rpc CreateNote (CreateNoteCommand) returns (CommandResponse);
  rpc UpdateNote (UpdateNoteCommand) returns (CommandResponse);
}

message CreateNoteCommand {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
  google.protobuf.Timestamp timeStamp = 5;
}

message UpdateNoteCommand {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
}

message CommandResponse {
  bool success = 1;
}
